--- a/mypractice/package.json
+++ b/mypractice/package.json
@@ -25,9 +25,9 @@
     "yup": "^1.7.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
     "server": "json-server --watch db.json --port 3002"
   },
@@ -50,6 +50,7 @@
     ]
   },
   "devDependencies": {
+    "@craco/craco": "^7.1.0",
     "json-server": "^1.0.0-beta.3"
   }
 }
